--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<footer class="container">
 			<nav>
 				<a href="index.html">daily blog</a>
-				<a href="prose.html">prose & poetry</a>
+				<a href="prose.html">prose &amp; poetry</a>
 				<a href="nonfiction.html">nonfiction</a>
 				<a href="about.html">about</a>
 			</nav>
