--- a/index.html
+++ b/index.html
@@ -7,37 +7,58 @@
 	</head>
 	<body>
 		<header class="hero container">
-			<h1 class="logo">
+			<h1> 
 				the daily lit
 			</h1>
-			<nav>
-				<a href="index.html">daily blog</a>
-				<a href="prose.html">prose &amp; poetry</a>
-				<a href="nonfiction.html">nonfiction</a>
-				<a href="about.html">about</a>
+			<nav class=>
+				<a href="index.html">daily blog</a> |
+				<a href="prose.html">prose &amp; poetry</a> |
+				<a href="nonfiction.html">nonfiction</a> |
+				<a href="about.html">about</a> 
 			</nav>
 		</header>
-		<section class="container">
+		<section class="welcome container">
 			<h2>welcome:</h2>
+			<p></p>
 			<p>the daily lit is a literary blog and portfolio hell-bent on sending you daily inspiration through 			prose, poetry, and non-fiction.</p>
 			<h2>news:</h2>
+			<p></p>
 			<p><a href="news.html">06.28.18.</a> launched website</p>
 		</section>
 		<section class="container">
 
-			<section class="container">
-				<h5>june the 19th, 2018</h5>
-				<p> these days, etc etc etc etc etc etc</p>
 
-			</section>
+				<h3>june the 19th, 2018</h3>
+				<span class=firstline>These days, everything is: difficult to define. Pockets of</span> pseudo-marital bliss punctuate the stormy weather. I turn 29 tomorrow.<br><br>
+-x-<br><br>
+
+<span class=firstline>These days, everything is: constantly changing. Growth is on the</span> horizon, personal and otherwise. The year is halfway over & it&#39;s been eventful, surely, and tumultuous on occasion, but mostly it&#39;s been nurturing. I&#39;ve moved into a new apartment & two bundles of sweet dried flowers decorate my workspace. I&#39;m writing, presently, and I&#39;ve been reading, presently. <br><br>
+
+A new friend, who owns a bookstore, sold me an entire (used) 1923 Yale Library collection of Shakespeare (40 books) for $10. I&#39;m enthused. I finished reading King Henry The Sixth (Part Two) yesterday and Julius Caesar the month prior. <br><br>
+
+I have ambitions to be more forthcoming about my daily writing: I intend to share it, here, on my blog, with the world, every day, if only to make myself accountable for something. <br><br>
+
+Already I&#39;m dreading words like &#39;mundane&#39; and &#39;quotidian.&#39;<br><br>
+
+-x-<br><br>
+
+<span class=firstline>I&#39;m failing to find the balance between interpersonal and</span> private/professional. What I mean is: sometimes, I live as if I exist in a vacuum. I&#39;m able to withdraw into myself so completely, at times, that I no longer see or hear the person next to me. Sometimes, it&#39;s important for me to spend time shrouded in my bubble so that I&#39;m able to focus on the words at hand.<br><br> 
+
+About those sweet dried flowers &#8212; mauve blush roses mixed with golden-white ones, deep blue asters accented among them &#8212; they were a gift for B&#8212;&#8212;&#8212;, my love. The perks of a shared apartment include living with the gifts we buy for one another. <br><br>
+
+I feel as though I&#39;ve been 29 for years. In fact, I&#39;m only 28, but sometime after 24 everything started to blur together. Time moves so fast, anymore, that I&#39;m amazed every time I glimpse the calendar. If I don&#39;t act now: when will I?<br><br>
+
+
+
+		</section>
+		<section class="nav2 container">
+			<a href="index.html">random day</a> |
+			<a href="prose.html">tomorrow</a> |
+			<a href="nonfiction.html">subscribe</a> |
+			<a href="nonfiction.html">&#62;&#62;</a> 
 		</section>
 		<footer class="container">
-			<nav>
-				<a href="index.html">daily blog</a>
-				<a href="prose.html">prose & poetry</a>
-				<a href="nonfiction.html">nonfiction</a>
-				<a href="about.html">about</a>
-			</nav>
+			<p></p>
 			<small>&copy; the daily lit; subscribe for your daily literature.</small>
 		</footer>
 	</body>
