--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 				<a href="about.html">about</a> 
 			</nav>
 		</header>
-		<section class="welcome container">
+		<aside class="welcome container">
 			<h2>welcome:</h2>
 			<p></p>
 			<p>the daily lit is a literary blog and portfolio hell-bent on sending you daily inspiration through 			prose, poetry, and non-fiction.</p>
 			<h2>news:</h2>
 			<p></p>
 			<p><a href="news.html">06.28.18.</a> launched website</p>
-		</section>
+		</aside>
 		<section class="container">
 
 
