--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>the daily lit | portfolio &amp; literary blog</title>
+		<title>daily lit | portfolio &amp; literary blog</title>
 		<link rel="stylesheet" href="assets/stylesheets/main.css">
 	</head>
 	<body>
 		<header class="hero container">
 			<h1> 
-				the daily lit
+				daily lit
 			</h1>
 			<nav class=>
 				<a href="index.html">daily blog</a> |
@@ -18,13 +18,14 @@
 			</nav>
 		</header>
 		<aside class="welcome container">
-			<h2>welcome:</h2>
+			<h2>welcome</h2>
 			<p></p>
-			<p>the daily lit is a literary blog and portfolio hell-bent on sending you daily inspiration through 			prose, poetry, and non-fiction.</p>
+			<p><strong>daily lit</strong> is a literary blog and portfolio<br> hell-bent on inspiring<br>prose, poetry, and nonfiction<br>
+by j. white </p>
 			<h2>news:</h2>
 			<p></p>
 			<p><a href="news.html">06.28.18.</a> launched website</p>
-		</aside>
+		</aside><section class="container"><hr width=100%></section><p></p>
 		<section class="container">
 
 
@@ -59,7 +60,7 @@ I feel as though I&#39;ve been 29 for years. In fact, I&#39;m only 28, but somet
 		</section>
 		<footer class="container">
 			<p></p>
-			<small>&copy; the daily lit; subscribe for your daily literature.</small>
+			<small>&copy; daily lit; subscribe for more daily literature.</small>
 		</footer>
 	</body>
 </html>
